@@ -17,7 +17,7 @@ import static org.eclipse.ditto.base.model.common.ConditionChecker.checkNotNull;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -48,7 +48,7 @@ public final class JwtSubjectIssuersConfig {
     private JwtSubjectIssuersConfig(final Iterable<JwtSubjectIssuerConfig> configItems, final String protocol) {
         protocolPrefix = protocol + "://";
         requireNonNull(configItems);
-        final Map<String, JwtSubjectIssuerConfig> modifiableSubjectIssuerConfigMap = new HashMap<>();
+        final Map<String, JwtSubjectIssuerConfig> modifiableSubjectIssuerConfigMap = new LinkedHashMap<>();
 
         configItems.forEach(configItem ->
                 addConfigToMap(configItem, modifiableSubjectIssuerConfigMap, protocolPrefix));
@@ -66,7 +66,7 @@ public final class JwtSubjectIssuersConfig {
                 // merge the default and extension config
                 Stream.concat(config.getOpenIdConnectIssuers().entrySet().stream(),
                         config.getOpenIdConnectIssuersExtension().entrySet().stream())
-                        .map(entry -> new JwtSubjectIssuerConfig(entry.getKey(), entry.getValue().getIssuer(),
+                        .map(entry -> new JwtSubjectIssuerConfig(entry.getKey(), entry.getValue().getIssuers(),
                                 entry.getValue().getAuthorizationSubjectTemplates()))
                         .collect(Collectors.toSet());
         return new JwtSubjectIssuersConfig(configItems, config.getProtocol());
@@ -75,8 +75,12 @@ public final class JwtSubjectIssuersConfig {
     private static void addConfigToMap(final JwtSubjectIssuerConfig config,
             final Map<String, JwtSubjectIssuerConfig> map,
             final String protocolPrefix) {
-        map.put(config.getIssuer(), config);
-        map.put(protocolPrefix + config.getIssuer(), config);
+
+        config.getIssuers()
+                .forEach(issuer -> {
+                    map.put(issuer, config);
+                    map.put(protocolPrefix + issuer, config);
+                });
     }
 
     public String getProtocolPrefix() {
@@ -91,13 +95,17 @@ public final class JwtSubjectIssuersConfig {
      * for this issuer
      */
     public Optional<JwtSubjectIssuerConfig> getConfigItem(final String issuer) {
-        return Optional.ofNullable(getConfigItemByIssuer(issuer).orElse(subjectIssuerConfigMap.get(issuer)));
+        return getConfigItemByIssuer(issuer)
+                .or(() -> Optional.ofNullable(subjectIssuerConfigMap.get(issuer)));
     }
 
     private Optional<JwtSubjectIssuerConfig> getConfigItemByIssuer(final String issuer) {
         return subjectIssuerConfigMap.values()
                 .stream()
-                .filter(jwtSubjectIssuerConfig -> jwtSubjectIssuerConfig.getIssuer().equals(issuer))
+                .filter(jwtSubjectIssuerConfig -> jwtSubjectIssuerConfig.getIssuers().stream()
+                        .anyMatch(configuredIssuer -> configuredIssuer.equals(issuer) ||
+                                protocolPrefix.concat(configuredIssuer).equals(issuer))
+                )
                 .findFirst();
     }
 
@@ -122,7 +130,7 @@ public final class JwtSubjectIssuersConfig {
 
         return subjectIssuerConfigMap.values().stream()
                 .filter(jwtSubjectIssuerConfig -> jwtSubjectIssuerConfig.getSubjectIssuer().equals(subjectIssuer))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
